--- a/css/inc/_main.scss
+++ b/css/inc/_main.scss
@@ -8,7 +8,8 @@ h1, h2, h3, h4, h5, h6, b,strong {
 a {
 	text-decoration: none;
 	color: #000;
-	// -webkit-transition: all 0.5s
+	-moz-transition: all 0.5s;
+	-webkit-transition: all 0.5s;
 	&:visited, &:hover {
 		color: #000;
 	}
@@ -33,7 +34,8 @@ header {
 	a, a:visited {
 		color: #fff;
 		margin: 0 3px;
-		// -webkit-transition: all 0.5s
+		-webkit-transition: all 0.5s;
+		-moz-transition: all 0.5s;
 	}
 	a:hover, #header_content a:hover {
 		text-shadow: 2px 2px 10px #666;
@@ -49,18 +51,41 @@ header {
 		display: inline-block;
 		li {
 			float: left;
+			// padding: 0 20px;
 			padding: 0 15px;
 		}
 	}
 	#global {
 		li {
-			// -webkit-transition: all 0.5s;
+			-webkit-transition: all 0.5s;
+			-moz-transition: all 0.5s;
 		}
 		li:hover {
-			// -webkit-transform: translate(0, -5px)
+			-webkit-transform: translate(0, -5px);
+			-moz-transform: translate(0, -5px);
+		}
+		#global-nav {
+			li {
+				-webkit-transition: all 1s;
+				-moz-transition: all 1s;
+				-o-transition: all 1s;
+				-ms-transition: all 1s;
+				transition: all 1s;
+			}
+			li:hover a {
+				-webkit-transform: translate(0, -5px);
+				-moz-transform: translate(0, -5px);
+				-o-transform: translate(0, -5px);
+				-ms-transform: translate(0, -5px);
+				transform: translate(0, -5px);
+			}
 		}
 	}
 } //end header
+
+
+
+
 
 #content {
 	padding: 10px;
