--- a/style.css
+++ b/style.css
@@ -412,24 +412,26 @@ h1, h2, h3, h4, h5, h6, b, strong {
 a {
   text-decoration: none;
   color: #000;
+  -moz-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
 }
-/* line 12, inc/_main.scss */
+/* line 13, inc/_main.scss */
 a:visited, a:hover {
   color: #000;
 }
 
-/* line 16, inc/_main.scss */
+/* line 17, inc/_main.scss */
 ul {
   padding: 0;
   margin: 0;
 }
 
-/* line 21, inc/_main.scss */
+/* line 22, inc/_main.scss */
 body {
   background: white url(img/noise4.png) repeat center center;
 }
 
-/* line 25, inc/_main.scss */
+/* line 26, inc/_main.scss */
 header {
   color: #fff;
   width: 100%;
@@ -439,53 +441,81 @@ header {
   padding: 3px 0;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
 }
-/* line 33, inc/_main.scss */
+/* line 34, inc/_main.scss */
 header a, header a:visited {
   color: #fff;
   margin: 0 3px;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
 }
-/* line 38, inc/_main.scss */
+/* line 40, inc/_main.scss */
 header a:hover, header #header_content a:hover {
   text-shadow: 2px 2px 10px #666666;
   color: #fff;
 }
-/* line 42, inc/_main.scss */
+/* line 44, inc/_main.scss */
 header h1 {
   margin: 0 0 4px 0;
 }
-/* line 45, inc/_main.scss */
+/* line 47, inc/_main.scss */
 header p {
   margin: 6px 3px;
 }
-/* line 48, inc/_main.scss */
+/* line 50, inc/_main.scss */
 header ul {
   display: inline-block;
 }
-/* line 50, inc/_main.scss */
+/* line 52, inc/_main.scss */
 header ul li {
   float: left;
   padding: 0 15px;
 }
+/* line 59, inc/_main.scss */
+header #global li {
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+}
+/* line 63, inc/_main.scss */
+header #global li:hover {
+  -webkit-transform: translate(0, -5px);
+  -moz-transform: translate(0, -5px);
+}
+/* line 68, inc/_main.scss */
+header #global #global-nav li {
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -o-transition: all 1s;
+  -ms-transition: all 1s;
+  transition: all 1s;
+}
+/* line 75, inc/_main.scss */
+header #global #global-nav li:hover a {
+  -webkit-transform: translate(0, -5px);
+  -moz-transform: translate(0, -5px);
+  -o-transform: translate(0, -5px);
+  -ms-transform: translate(0, -5px);
+  transform: translate(0, -5px);
+}
 
-/* line 65, inc/_main.scss */
+/* line 90, inc/_main.scss */
 #content {
   padding: 10px;
   width: 90%;
   margin: 0 auto;
 }
-/* line 70, inc/_main.scss */
+/* line 95, inc/_main.scss */
 #content h1 {
   margin: 5px 0;
 }
-/* line 74, inc/_main.scss */
+/* line 99, inc/_main.scss */
 #content h1 + p a {
   background: #d4d4d4;
 }
-/* line 77, inc/_main.scss */
+/* line 102, inc/_main.scss */
 #content h1 + p a:hover {
   background: #f8f8f8;
 }
-/* line 82, inc/_main.scss */
+/* line 107, inc/_main.scss */
 #content p img {
   max-width: 100%;
   height: auto;
@@ -495,139 +525,139 @@ header ul li {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   background: #fff;
 }
-/* line 94, inc/_main.scss */
+/* line 119, inc/_main.scss */
 #content.resume .section {
   padding-bottom: 20px;
   overflow: hidden;
 }
-/* line 97, inc/_main.scss */
+/* line 122, inc/_main.scss */
 #content.resume .section h2, #content.resume .section h3 {
   letter-spacing: 1px;
   font-size: 14px;
 }
-/* line 103, inc/_main.scss */
+/* line 128, inc/_main.scss */
 #content.resume .section .left h2 {
   display: inline;
   padding: 0 10px 0 0;
   margin: 0;
 }
-/* line 111, inc/_main.scss */
+/* line 136, inc/_main.scss */
 #content.resume .section .right .heading h3 {
   margin: 0;
   display: block;
   font-weight: 700;
 }
-/* line 117, inc/_main.scss */
+/* line 142, inc/_main.scss */
 #content.resume .section .right p, #content.resume .section .right li {
   font-size: 14px;
   line-height: 20px;
 }
-/* line 121, inc/_main.scss */
+/* line 146, inc/_main.scss */
 #content.resume .section .right p {
   margin: 0;
   float: left;
 }
-/* line 125, inc/_main.scss */
+/* line 150, inc/_main.scss */
 #content.resume .section .right ul {
   list-style: none;
   padding-top: 2px;
 }
 
-/* line 134, inc/_main.scss */
+/* line 159, inc/_main.scss */
 #all_projects {
   width: 100%;
   text-align: center;
 }
-/* line 138, inc/_main.scss */
+/* line 163, inc/_main.scss */
 #all_projects ul li {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   background: #f8f8f8;
   margin: 3px;
   display: inline-block;
 }
-/* line 143, inc/_main.scss */
+/* line 168, inc/_main.scss */
 #all_projects ul li:hover {
   background: #d4d4d4;
 }
-/* line 144, inc/_main.scss */
+/* line 169, inc/_main.scss */
 #all_projects ul li a {
   padding: 5px;
 }
-/* line 145, inc/_main.scss */
+/* line 170, inc/_main.scss */
 #all_projects ul li p {
   margin: 0;
   text-align: center;
   padding: 5px 0;
 }
 
-/* line 153, inc/_main.scss */
+/* line 178, inc/_main.scss */
 footer {
   width: 90%;
   margin: 0 auto 20px;
   text-align: center;
 }
-/* line 158, inc/_main.scss */
+/* line 183, inc/_main.scss */
 footer a, footer a:visited {
   font-size: 13px;
   padding: 4px 8px;
   color: #fff;
 }
-/* line 163, inc/_main.scss */
+/* line 188, inc/_main.scss */
 footer a:hover {
   color: #d4d4d4;
 }
-/* line 166, inc/_main.scss */
+/* line 191, inc/_main.scss */
 footer #to_top {
   position: absolute;
   right: 20px;
   color: #000;
 }
-/* line 170, inc/_main.scss */
+/* line 195, inc/_main.scss */
 footer #to_top:hover {
   color: #d4d4d4;
 }
-/* line 174, inc/_main.scss */
+/* line 199, inc/_main.scss */
 footer h3 {
   margin-bottom: 10px;
 }
-/* line 178, inc/_main.scss */
+/* line 203, inc/_main.scss */
 footer .round {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
   border: #f8f8f8 1px solid;
 }
-/* line 184, inc/_main.scss */
+/* line 209, inc/_main.scss */
 footer .twitter {
   background: #46C0FB;
   border: 1px solid #46c0fb;
 }
-/* line 188, inc/_main.scss */
+/* line 213, inc/_main.scss */
 footer .behance {
   background: #008CFF;
   border: 1px solid #008cff;
 }
-/* line 192, inc/_main.scss */
+/* line 217, inc/_main.scss */
 footer .linkedin {
   background: #0083A8;
   border: 1px solid #0083a8;
 }
-/* line 196, inc/_main.scss */
+/* line 221, inc/_main.scss */
 footer .googleplus {
   background: #DD4B39;
   border: 1px solid #dd4b39;
 }
-/* line 200, inc/_main.scss */
+/* line 225, inc/_main.scss */
 footer .github {
   background: #DADADA;
   border: 1px solid #dadada;
 }
-/* line 204, inc/_main.scss */
+/* line 229, inc/_main.scss */
 footer #share {
   width: 100%;
   text-align: center;
 }
-/* line 207, inc/_main.scss */
+/* line 232, inc/_main.scss */
 footer #share li {
   display: inline-block;
   margin: 6px 0px;
